--- a/workloads/gitops.yaml
+++ b/workloads/gitops.yaml
@@ -1,19 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello
-  namespace: lasample
+  name: gitops
+  namespace: bentonamespace
   labels:
-    app: hello
+    app: gitops
 spec:
   selector:
     matchLabels:
-      app: hello
+      app: gitops
   template:
     metadata:
       labels:
-        app: hello
+        app: gitops
     spec:
       containers:
-      - name: hello
-        image: linuxacademycontent/gitops:hellov1.0
+      - name: gitops
+        image: mbentor/gitops:test1.0.1
+        resources:
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
