--- a/workloads/gitops.yaml
+++ b/workloads/gitops.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: gitops
-        image: mbentor/gitops:test1.0.1
+        image: linuxacademycontent/gitops:hellov1.0
         resources:
           limits:
             memory: "128Mi"
